fix the problem of white spaces at the bottom of the page

--- a/webapp/src/styles.scss
+++ b/webapp/src/styles.scss
@@ -87,6 +87,7 @@ $my-theme: mat.define-light-theme((color: (primary: $my-primary,
 html,
 body {
   height: 100%;
+  background-color: $lupa-blue;
 }
 
 body {
